{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 17,
  "lineage": "3a6b360e-604d-2ed2-5b08-aa2e4e6b2111",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbc6c4e0-8163-4fe4-b98c-477ab14ce40a/resourceGroups/app-dg/providers/Microsoft.Network/networkSecurityGroups/dg-nsg",
            "location": "westus2",
            "name": "dg-nsg",
            "resource_group_name": "app-dg",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_rdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cbc6c4e0-8163-4fe4-b98c-477ab14ce40a/resourceGroups/app-dg/providers/Microsoft.Network/networkSecurityGroups/dg-nsg/securityRules/RDP Inbound",
            "name": "RDP Inbound",
            "network_security_group_name": "dg-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "app-dg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/cbc6c4e0-8163-4fe4-b98c-477ab14ce40a/resourceGroups/app-dg/providers/Microsoft.Network/publicIPAddresses/dg-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.66.243.53",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "dg-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "app-dg",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "id": "/subscriptions/cbc6c4e0-8163-4fe4-b98c-477ab14ce40a/resourceGroups/app-dg/providers/Microsoft.Network/virtualNetworks/dg-vnet/subnets/dg-subnet",
            "name": "dg-subnet",
            "network_security_group_id": "/subscriptions/cbc6c4e0-8163-4fe4-b98c-477ab14ce40a/resourceGroups/app-dg/providers/Microsoft.Network/networkSecurityGroups/dg-nsg",
            "resource_group_name": "app-dg",
            "virtual_network_name": "dg-vnet"
          },
          "depends_on": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/cbc6c4e0-8163-4fe4-b98c-477ab14ce40a/resourceGroups/app-dg/providers/Microsoft.Network/virtualNetworks/dg-vnet",
            "location": "westus2",
            "name": "dg-vnet",
            "resource_group_name": "app-dg"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}